[package]
name = "iroh-beacon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
bytes = { version = "1.4.0", features = ["serde"] }
data-encoding = "2.4.0"
derive_more = { version = "1.0.0-beta.1", features = ["add", "debug", "deref", "display", "from", "try_into", "into"] }
ed25519-dalek = { version = "2.0.0", features = ["serde", "rand_core"] }
indexmap = "2.0"
postcard = { version = "1", default-features = false, features = ["alloc", "use-std", "experimental-derive"] }
rand = { version = "0.8.5", features = ["std_rng"] }
rand_core = "0.6.4"
serde = { version = "1.0.164", features = ["derive"] }
tracing = "0.1"
iroh-metrics = { path = "../iroh-metrics", version = "0.9.0" }

futures = { version = "0.3.25" }
iroh-net = { path = "../iroh-net", version = "0.9.0" }
quinn = { version = "0.10" }
iroh-gossip = { version = "0.9.0", path = "../iroh-gossip" }
tokio = { version = "1", features = ["io-util", "sync", "rt", "macros", "net", "fs"] }
once_cell = "1.18.0"
conhash = "*"

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["macros", "io-util", "rt"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[example]]
name = "beacon"
[[example]]
name = "ring"